# autoreels

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
archive/: README_autoreels.md  modal_app.py  settings_autoreels.yaml
archive/campaigns/: matra.yaml
archive/src_autoreels/: creative.py  discord_bot.py  images.py  prompter.py  video_gen.py
archive/src_autoreels/social/: facebook.py  tiktok.py
config/: brand.yaml  calendar.yaml  series.yaml  settings.yaml  visual_style.yaml  voice.yaml
config/content_types/: cheat_codes.yaml  endgame.yaml  mascot_scene.yaml  meme.yaml  opening_trap.yaml  product_demo.yaml  puzzle.yaml  quote.yaml
config/knowledge/: cheat_codes.yaml  endgame_concepts.yaml  opening_traps.yaml
scripts/: download_lichess_puzzles.py  mascot_pose_prompts.md  meta_setup.py  seed_idea_pools.py  test_pipeline.py  verify_endgame_concepts.py  verify_opening_traps.py
src/: audio.py  campaign.py  cli.py  director.py  post_process.py  scheduler.py  tracker.py
src/chessbrain/: __init__.py  caption.py  chessboard.py  cli.py  director.py  embed.py  llm.py  pipeline.py  puzzle.py  scheduler.py  settings.py
src/chessbrain/brain/: __init__.py  calendar.py  db.py  memory.py  reddit_inspo.py  series.py
src/chessbrain/content_types/: __init__.py  base.py  cheat_codes.py  endgame.py  mascot_scene.py  meme.py  opening_trap.py  planner.py  product_demo.py  puzzle.py  quote.py  registry.py
src/chessbrain/imagegen/: __init__.py  base.py  cache.py  client.py
src/chessbrain/publish/: __init__.py  (+2 more)
src/social/: instagram.py
(+6 files in other folders)
